tests/snapshot/error/parser/expression/exponent_lhs_await.js
async function f() { await 1 ** 2; }
